--- a/ZeiterfassungPierburg/Views/TeileInProduktionsanlage/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/TeileInProduktionsanlage/Index.cshtml
@@ -5,7 +5,7 @@
     <div class="box-header with-border">
         <div class="box box-info">
             <div class="box-header with-border">
-                <h3>Übersicht der Mitarbeiter*innen</h3>
+                <h3>Übersicht der Zugehörigkeit der Teile zur Produktionsanlagen</h3>
                 <table id="example" class="table table-striped table-bordered" style="width:100%">
                     <thead>
                         <tr>
