--- a/ZeiterfassungPierburg/Views/Fertigungsteil/Create.cshtml
+++ b/ZeiterfassungPierburg/Views/Fertigungsteil/Create.cshtml
@@ -28,11 +28,19 @@
                         </div>
                     </div>
 
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-8">
-                        <input type="submit" value="Hinzufügen" class="btn btn-default" />
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.teZEIT, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-8">
+                            @Html.EditorFor(model => model.teZEIT, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.teZEIT, "", new { @class = "text-danger" })
+                        </div>
                     </div>
-                </div>
+
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-8">
+                            <input type="submit" value="Hinzufügen" class="btn btn-default" />
+                        </div>
+                    </div>
                 }
 
                 <div>
