--- a/ZeiterfassungPierburg/Views/Fertigungsteil/Edit.cshtml
+++ b/ZeiterfassungPierburg/Views/Fertigungsteil/Edit.cshtml
@@ -30,6 +30,13 @@
                         </div>
                     </div>
 
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.teZEIT, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.teZEIT, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.teZEIT, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
 
 
                     <div class="form-group">
