--- a/ZeiterfassungPierburg/Views/Fertigungsteil/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/Fertigungsteil/Index.cshtml
@@ -14,7 +14,9 @@
                             <th>
                                 @Html.DisplayNameFor(model => model.Bezeichnung)
                             </th>
-
+                            <th>
+                                @Html.DisplayNameFor(model => model.teZEIT)
+                            </th>
                             <th>
 
                             </th>
@@ -23,19 +25,22 @@
                     <tbody>
                         @foreach (var item in Model)
                         {
-                            <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.ZeichenNr)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Bezeichnung)
-                                </td>
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.ZeichenNr)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Bezeichnung)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.teZEIT)
+                            </td>
 
-                                <td>
-                                    @Html.ActionLink("Bearbeiten", "Edit", new { id = item.ID }) |
-                                    @Html.ActionLink("Löschen", "Delete", new { id = item.ID }, new { onclick = "return confirm('Wirklich löschen?');" })
-                                </td>
-                            </tr>
+                            <td>
+                                @Html.ActionLink("Bearbeiten", "Edit", new { id = item.ID }) |
+                                @Html.ActionLink("Löschen", "Delete", new { id = item.ID }, new { onclick = "return confirm('Wirklich löschen?');" })
+                            </td>
+                        </tr>
                         }
 
                     </tbody>
