--- a/ZeiterfassungPierburg/Views/Shared/_Layout.cshtml
+++ b/ZeiterfassungPierburg/Views/Shared/_Layout.cshtml
@@ -67,11 +67,11 @@
                     <!-- /.search form -->
                     <!-- Sidebar Menu -->
                     <ul class="sidebar-menu" data-widget="tree">
-                        <li>@Html.ActionLink("NEUE ERFASSUNG", "Create", "Neuezeiterfassung")</li>
+                        <li>@Html.ActionLink("NEUE ERFASSUNG - Band", "Create", "Neuezeiterfassung")</li>
                         <li>@Html.ActionLink("NEUE ERFASSUNG - MEBA", "CreateMEBA", "Neuezeiterfassung")</li>
                         _____________________________
 
-                        <li>@Html.ActionLink("Übersicht der Schichten", "Index", "MitarbeiterInSchicht")</li>
+                        <li>@Html.ActionLink("Übersicht - Bänder", "Index", "MitarbeiterInSchicht")</li>
                         <li>@Html.ActionLink("Übersicht - MEBA  ", "IndexMEBA", "MitarbeiterInSchicht")</li>
                         _____________________________
                         <!--<li> <li>@Html.ActionLink("Schichten", "Index", "SchichtInfo")</li>-->
