--- a/ZeiterfassungPierburg/Views/TeileInProduktionsanlage/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/TeileInProduktionsanlage/Index.cshtml
@@ -5,7 +5,8 @@
     <div class="box-header with-border">
         <div class="box box-info">
             <div class="box-header with-border">
-                <h3>Übersicht der Zugehörigkeit der Teile zur Produktionsanlagen</h3>
+                <h3>Übersicht der Zugehörigkeit der Teile zu den Produktionsanlagen</h3>
+                <h5 style="padding-bottom: 25px; padding-top: 5px; color:red">Hinweis: Bänder dürfen nur über einen Fertigungsteil verfügen. Wenn du den Teil ändern möchtest, musst du erstmal den vorigen Teil löschen.</h5>
                 <table id="example" class="table table-striped table-bordered" style="width:100%">
                     <thead>
                         <tr>
