--- a/ZeiterfassungPierburg/Views/Mitarbeiter/Edit.cshtml
+++ b/ZeiterfassungPierburg/Views/Mitarbeiter/Edit.cshtml
@@ -61,13 +61,20 @@
                         </div>
                     </div>
 
-
                     <div class="form-group">
                         @Html.LabelFor(model => model.Beschäftigungsart, htmlAttributes: new { @class = "control-label col-md-2" })
 
                         <div class="col-md-8">
-                            @Html.DropDownListFor(m => m.Beschäftigungsart, Model.BeschäftigungsartList,  new { @class = "form-control" })
+                            @Html.DropDownListFor(m => m.Beschäftigungsart, Model.BeschäftigungsartList, new { @class = "form-control" })
                             @Html.ValidationMessageFor(model => model.Beschäftigungsart, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.istAktiv, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-8">
+                            @Html.CheckBoxFor(model => model.istAktiv, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.istAktiv, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
